--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;600;800&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/blog-preview-card-main/index.css" />
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
   <div class="frame">
